--- a/src/sample/maindashboard.fxml
+++ b/src/sample/maindashboard.fxml
@@ -1,8 +1,248 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.DashboardController"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.DashboardController">
+   <GridPane prefHeight="730.0" prefWidth="1288.0">
+      <columnConstraints>
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="159.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="571.0" minHeight="10.0" prefHeight="571.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+      <AnchorPane prefHeight="159.0" prefWidth="1277.0" style="-fx-background-color: #4A062B;">
+         <Label alignment="CENTER" layoutX="386.0" layoutY="39.0" prefHeight="65.0" prefWidth="515.0" style="-fx-text-fill: white;" text="MyForethought">
+            <font>
+               <Font name="Brush Script MT Italic" size="63.0" />
+            </font>
+         </Label>
+         <ImageView fx:id="logOutBtn" fitHeight="55.0" fitWidth="59.0" layoutX="1205.0" layoutY="93.0">
+            <Image url="@../Images/logout-xl.png" />
+         </ImageView>
+         <Label fx:id="tipsPane" alignment="CENTER" layoutX="810.0" layoutY="6.0" opacity="0.76" prefHeight="41.0" prefWidth="464.0" style="-fx-text-fill: black; -fx-background-color: white;" text="Use different colors for different kinds of tasks to help remember them better!" textAlignment="CENTER" wrapText="true" />
+         <AnchorPane fx:id="weather" layoutX="14.0" layoutY="97.0" prefHeight="57.0" prefWidth="266.0">
+            <ImageView fitHeight="56.0" fitWidth="60.0">
+               <Image url="@../Images/icons8-sun-48.png"/>
+            </ImageView>
+            <Label layoutX="58.0" layoutY="10.0" prefHeight="36.0" prefWidth="122.0"
+                   style="-fx-text-fill: white; -fx-font-size: 22;" text="40 degrees"/>
+            <Label layoutX="196.0" layoutY="11.0" prefHeight="36.0" prefWidth="70.0"
+                   style="-fx-text-fill: white; -fx-font-size: 22;" text="15:40"/>
+         </AnchorPane>
+      </AnchorPane>
+      <AnchorPane prefHeight="718.0" prefWidth="1288.0" style="-fx-background-color: #7D224F;" GridPane.rowIndex="1">
+         <TilePane layoutX="120.0" prefHeight="562.0" prefWidth="848.0">
+            <padding>
+               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
+            <AnchorPane fx:id="calendarBtn" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <effect>
+                  <DropShadow offsetX="4.0" offsetY="5.0" spread="0.22" />
+               </effect>
+               <TilePane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </TilePane.margin>
+               <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="28.0" layoutY="12.0">
+                  <Image url="@../Images/tear-of-calendar-xxl.png" />
+               </ImageView>
+            </AnchorPane>
+            <AnchorPane fx:id="travelBtn" layoutX="276.0" layoutY="270.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <effect>
+                  <DropShadow offsetX="4.0" offsetY="5.0" spread="0.22" />
+               </effect>
+               <TilePane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </TilePane.margin>
+               <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="26.0" layoutY="31.0">
+                  <Image url="@../Images/airplane-11-xxl.png" />
+               </ImageView>
+            </AnchorPane>
+            <AnchorPane fx:id="budgetBtn" layoutX="286.0" layoutY="284.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <effect>
+                  <DropShadow offsetX="4.0" offsetY="5.0" spread="0.22" />
+               </effect>
+               <TilePane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </TilePane.margin>
+               <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="32.0" layoutY="16.0">
+                  <Image url="@../Images/piggy-bank-2-xxl-(3).png" />
+               </ImageView>
+            </AnchorPane>
+            <AnchorPane fx:id="fitnessBtn" layoutX="290.0" layoutY="284.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <effect>
+                  <DropShadow offsetX="4.0" offsetY="5.0" spread="0.22" />
+               </effect>
+               <TilePane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </TilePane.margin>
+               <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="26.0" layoutY="22.0">
+                  <Image url="@../Images/dumbbell-xxl-(5).png" />
+               </ImageView>
+            </AnchorPane>
+            <AnchorPane fx:id="diaryBtn" layoutX="540.0" layoutY="286.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <effect>
+                  <DropShadow offsetX="4.0" offsetY="5.0" spread="0.22" />
+               </effect>
+               <TilePane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </TilePane.margin>
+               <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="25.0" layoutY="22.0">
+                  <Image url="@../Images/book-xxl(3).png" />
+               </ImageView>
+            </AnchorPane>
+            <AnchorPane fx:id="listBtn" layoutX="290.0" layoutY="286.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <effect>
+                  <DropShadow offsetX="4.0" offsetY="5.0" spread="0.22" />
+               </effect>
+               <TilePane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </TilePane.margin>
+               <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="21.0" layoutY="27.0">
+                  <Image url="@../Images/view-details-xxl(4).png" />
+               </ImageView>
+            </AnchorPane>
+         </TilePane>
+         <ScrollPane layoutX="959.0" layoutY="21.0" prefHeight="521.0" prefWidth="312.0">
+            <effect>
+               <DropShadow offsetX="5.0" offsetY="5.0" spread="0.15" />
+            </effect>
+            <TilePane fx:id="tasksList" alignment="TOP_CENTER" prefHeight="607.0" prefWidth="300.0">
+               <padding>
+                  <Insets bottom="10.0" top="10.0" />
+               </padding>
+               <VBox prefHeight="108.0" prefWidth="285.0" style="-fx-background-color: red;">
+                  <TilePane.margin>
+                     <Insets bottom="10.0" />
+                  </TilePane.margin>
+                  <AnchorPane prefHeight="98.0" prefWidth="275.0" style="-fx-background-color: white;">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </VBox.margin>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <Label alignment="CENTER" layoutX="30.0" layoutY="17.0" prefHeight="24.0" prefWidth="197.0" style="-fx-font-size: 16; -fx-text-fill: red;" text="Doctor's Appointment" />
+                     <Label alignment="CENTER" layoutX="80.0" layoutY="52.0" prefHeight="31.0" prefWidth="104.0" style="-fx-font-size: 20; -fx-text-fill: red;" text="00:15:00" />
+                  </AnchorPane>
+               </VBox>
+               <VBox layoutX="16.0" layoutY="20.0" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: red;">
+                  <TilePane.margin>
+                     <Insets bottom="10.0" />
+                  </TilePane.margin>
+                  <AnchorPane prefHeight="108.0" prefWidth="245.0" style="-fx-background-color: white;">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </VBox.margin>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <Label alignment="CENTER" layoutX="30.0" layoutY="17.0" prefHeight="24.0" prefWidth="197.0" style="-fx-font-size: 16; -fx-text-fill: red;" text="Business meeting" />
+                     <Label alignment="CENTER" layoutX="80.0" layoutY="52.0" prefHeight="31.0" prefWidth="104.0" style="-fx-font-size: 20; -fx-text-fill: red;" text="00:30:00" />
+                  </AnchorPane>
+               </VBox>
+               <VBox layoutX="16.0" layoutY="128.0" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: red;">
+                  <TilePane.margin>
+                     <Insets bottom="10.0" />
+                  </TilePane.margin>
+                  <AnchorPane prefHeight="108.0" prefWidth="245.0" style="-fx-background-color: white;">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </VBox.margin>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <Label alignment="CENTER" layoutX="30.0" layoutY="17.0" prefHeight="24.0" prefWidth="197.0" style="-fx-font-size: 16; -fx-text-fill: red;" text="Assignments" />
+                     <Label alignment="CENTER" layoutX="80.0" layoutY="52.0" prefHeight="31.0" prefWidth="104.0" style="-fx-font-size: 20; -fx-text-fill: red;" text="00:45:00" />
+                  </AnchorPane>
+               </VBox>
+               <VBox layoutX="16.0" layoutY="236.0" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: orange;">
+                  <TilePane.margin>
+                     <Insets bottom="10.0" />
+                  </TilePane.margin>
+                  <AnchorPane prefHeight="108.0" prefWidth="245.0" style="-fx-background-color: white;">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </VBox.margin>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <Label alignment="CENTER" layoutX="30.0" layoutY="17.0" prefHeight="24.0" prefWidth="197.0" style="-fx-text-fill: orange;" text="Pick up Grandma" />
+                     <Label alignment="CENTER" layoutX="80.0" layoutY="52.0" prefHeight="31.0" prefWidth="104.0" style="-fx-text-fill: orange;" text="03:00:00" />
+                  </AnchorPane>
+               </VBox>
+               <VBox layoutX="16.0" layoutY="344.0" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: green;">
+                  <TilePane.margin>
+                     <Insets bottom="10.0" />
+                  </TilePane.margin>
+                  <AnchorPane prefHeight="108.0" prefWidth="245.0" style="-fx-background-color: white;">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </VBox.margin>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <Label alignment="CENTER" layoutX="30.0" layoutY="17.0" prefHeight="24.0" prefWidth="197.0" style="-fx-text-fill: green;" text="Dog bath" />
+                     <Label alignment="CENTER" layoutX="80.0" layoutY="52.0" prefHeight="31.0" prefWidth="104.0" style="-fx-text-fill: green;" text="00:06:00" />
+                  </AnchorPane>
+               </VBox>
+            </TilePane>
+         </ScrollPane>
+         <ImageView fx:id="searchBtn" fitHeight="55.0" fitWidth="53.0" layoutX="42.0" layoutY="32.0">
+            <effect>
+               <DropShadow />
+            </effect>
+            <Image url="@../Images/search-9-xl.png" />
+         </ImageView>
+         <ImageView fx:id="aboutBtn" fitHeight="55.0" fitWidth="53.0" layoutX="48.0" layoutY="472.0">
+            <effect>
+               <DropShadow />
+            </effect>
+            <Image url="@../Images/info-2-xl.png" />
+         </ImageView>
+         <ImageView fx:id="helpBtn" fitHeight="56.0" fitWidth="59.0" layoutX="46.0" layoutY="386.0">
+            <effect>
+               <DropShadow />
+            </effect>
+            <Image url="@../Images/question-mark-xl.png" />
+         </ImageView>
+         <ImageView fx:id="settingsBtn" fitHeight="57.0" fitWidth="60.0" layoutX="41.0" layoutY="115.0">
+            <effect>
+               <DropShadow />
+            </effect>
+            <Image url="@../Images/settings-7-xl.png" />
+         </ImageView>
+      </AnchorPane>
+   </GridPane>
+</AnchorPane>
