--- a/src/sample/maindashboard.fxml
+++ b/src/sample/maindashboard.fxml
@@ -24,25 +24,23 @@
          <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="159.0" vgrow="SOMETIMES" />
          <RowConstraints maxHeight="571.0" minHeight="10.0" prefHeight="571.0" vgrow="SOMETIMES" />
       </rowConstraints>
-      <AnchorPane prefHeight="159.0" prefWidth="1277.0" style="-fx-background-color: #4A062B;">
-         <Label alignment="CENTER" layoutX="386.0" layoutY="39.0" prefHeight="65.0" prefWidth="515.0" style="-fx-text-fill: white;" text="MyForethought">
+      <AnchorPane prefHeight="159.0" prefWidth="1277.0" style="-fx-background-color: white;">
+         <Label alignment="CENTER" layoutX="386.0" layoutY="39.0" prefHeight="65.0" prefWidth="515.0" style="-fx-text-fill: #4A062B;" text="MyForethought">
             <font>
                <Font name="Brush Script MT Italic" size="63.0" />
             </font>
          </Label>
-         <ImageView fx:id="logOutBtn" fitHeight="55.0" fitWidth="59.0" layoutX="1205.0" layoutY="93.0">
-            <Image url="@../Images/logout-xl.png" />
-         </ImageView>
-         <Label fx:id="tipsPane" alignment="CENTER" layoutX="810.0" layoutY="6.0" opacity="0.76" prefHeight="41.0" prefWidth="464.0" style="-fx-text-fill: black; -fx-background-color: white;" text="Use different colors for different kinds of tasks to help remember them better!" textAlignment="CENTER" wrapText="true" />
+         <Label fx:id="tipsPane" alignment="CENTER" layoutX="810.0" layoutY="6.0" opacity="0.64" prefHeight="41.0" prefWidth="472.0" style="-fx-text-fill: black; -fx-background-color: #D9D3CB; -fx-border-width: 2; -fx-border-color: black;" text="Use different colors for different kinds of tasks to help remember them better!" textAlignment="CENTER" wrapText="true" />
          <AnchorPane fx:id="weather" layoutX="14.0" layoutY="97.0" prefHeight="57.0" prefWidth="266.0">
             <ImageView fitHeight="56.0" fitWidth="60.0">
-               <Image url="@../Images/icons8-sun-48.png"/>
+               <Image url="@../Images/icons8-sun-48.png" />
             </ImageView>
-            <Label layoutX="58.0" layoutY="10.0" prefHeight="36.0" prefWidth="122.0"
-                   style="-fx-text-fill: white; -fx-font-size: 22;" text="40 degrees"/>
-            <Label layoutX="196.0" layoutY="11.0" prefHeight="36.0" prefWidth="70.0"
-                   style="-fx-text-fill: white; -fx-font-size: 22;" text="15:40"/>
+            <Label layoutX="58.0" layoutY="10.0" prefHeight="36.0" prefWidth="122.0" style="-fx-text-fill: #4A062B;" text="40 degrees" />
+            <Label layoutX="196.0" layoutY="11.0" prefHeight="36.0" prefWidth="70.0" style="-fx-text-fill: #4A062B;" text="15:40" />
          </AnchorPane>
+         <ImageView fx:id="logOutBtn" fitHeight="41.0" fitWidth="43.0" layoutX="1221.0" layoutY="100.0">
+            <Image url="@../Images/logout-xl(1).png"/>
+         </ImageView>
       </AnchorPane>
       <AnchorPane prefHeight="718.0" prefWidth="1288.0" style="-fx-background-color: #7D224F;" GridPane.rowIndex="1">
          <TilePane layoutX="120.0" prefHeight="562.0" prefWidth="848.0">
