--- a/src/sample/FXMLs/budget.fxml
+++ b/src/sample/FXMLs/budget.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.DashboardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.DashboardController">
    <GridPane prefHeight="730.0" prefWidth="1288.0">
       <columnConstraints>
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -33,13 +33,13 @@
          <Label fx:id="tipsPane" alignment="CENTER" layoutX="810.0" layoutY="6.0" opacity="0.64" prefHeight="41.0" prefWidth="472.0" style="-fx-text-fill: black; -fx-background-color: #D9D3CB; -fx-border-width: 2; -fx-border-color: black;" text="Use different colors for different kinds of tasks to help remember them better!" textAlignment="CENTER" wrapText="true" />
          <AnchorPane fx:id="weather" layoutX="14.0" layoutY="97.0" prefHeight="57.0" prefWidth="266.0">
             <ImageView fitHeight="56.0" fitWidth="60.0">
-               <Image url="@../Images/icons8-sun-48.png" />
+               <Image url="@../../Images/icons8-sun-48.png" />
             </ImageView>
             <Label layoutX="58.0" layoutY="10.0" prefHeight="36.0" prefWidth="122.0" style="-fx-text-fill: #4A062B;" text="40 degrees" />
             <Label layoutX="196.0" layoutY="11.0" prefHeight="36.0" prefWidth="70.0" style="-fx-text-fill: #4A062B;" text="15:40" />
          </AnchorPane>
-         <ImageView fx:id="logOutBtn" fitHeight="41.0" fitWidth="43.0" layoutX="1221.0" layoutY="100.0">
-            <Image url="@../Images/logout-xl(1).png"/>
+         <ImageView fx:id="logOutBtn" fitHeight="41.0" fitWidth="43.0" layoutX="1221.0" layoutY="100.0" onMouseClicked="#HandleBtns">
+            <Image url="@../../Images/logout-xl(1).png" />
          </ImageView>
       </AnchorPane>
       <AnchorPane prefHeight="718.0" prefWidth="1288.0" style="-fx-background-color: #7D224F;" GridPane.rowIndex="1">
@@ -47,7 +47,7 @@
             <padding>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
-            <AnchorPane fx:id="calendarBtn" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+            <AnchorPane fx:id="calendarBtn" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#HandlePages" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
@@ -58,10 +58,10 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </TilePane.margin>
                <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="28.0" layoutY="12.0">
-                  <Image url="@../Images/tear-of-calendar-xxl.png" />
+                  <Image url="@../../Images/tear-of-calendar-xxl.png" />
                </ImageView>
             </AnchorPane>
-            <AnchorPane fx:id="travelBtn" layoutX="276.0" layoutY="270.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+            <AnchorPane fx:id="travelBtn" layoutX="276.0" layoutY="270.0" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#HandlePages" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
@@ -72,10 +72,10 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </TilePane.margin>
                <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="26.0" layoutY="31.0">
-                  <Image url="@../Images/airplane-11-xxl.png" />
+                  <Image url="@../../Images/airplane-11-xxl.png" />
                </ImageView>
             </AnchorPane>
-            <AnchorPane fx:id="budgetBtn" layoutX="286.0" layoutY="284.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+            <AnchorPane fx:id="budgetBtn" layoutX="286.0" layoutY="284.0" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#HandlePages" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
@@ -86,10 +86,10 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </TilePane.margin>
                <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="32.0" layoutY="16.0">
-                  <Image url="@../Images/piggy-bank-2-xxl-(3).png" />
+                  <Image url="@../../Images/piggy-bank-2-xxl-(3).png" />
                </ImageView>
             </AnchorPane>
-            <AnchorPane fx:id="fitnessBtn" layoutX="290.0" layoutY="284.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+            <AnchorPane fx:id="fitnessBtn" layoutX="290.0" layoutY="284.0" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#HandlePages" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
@@ -100,10 +100,10 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </TilePane.margin>
                <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="26.0" layoutY="22.0">
-                  <Image url="@../Images/dumbbell-xxl-(5).png" />
+                  <Image url="@../../Images/dumbbell-xxl-(5).png" />
                </ImageView>
             </AnchorPane>
-            <AnchorPane fx:id="diaryBtn" layoutX="540.0" layoutY="286.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+            <AnchorPane fx:id="diaryBtn" layoutX="540.0" layoutY="286.0" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#HandlePages" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
@@ -114,10 +114,10 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </TilePane.margin>
                <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="25.0" layoutY="22.0">
-                  <Image url="@../Images/book-xxl(3).png" />
+                  <Image url="@../../Images/book-xxl(3).png" />
                </ImageView>
             </AnchorPane>
-            <AnchorPane fx:id="listBtn" layoutX="290.0" layoutY="286.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
+            <AnchorPane fx:id="listBtn" layoutX="290.0" layoutY="286.0" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#HandlePages" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: white;">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
@@ -128,7 +128,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </TilePane.margin>
                <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="21.0" layoutY="27.0">
-                  <Image url="@../Images/view-details-xxl(4).png" />
+                  <Image url="@../../Images/view-details-xxl(4).png" />
                </ImageView>
             </AnchorPane>
          </TilePane>
@@ -140,7 +140,7 @@
                <padding>
                   <Insets bottom="10.0" top="10.0" />
                </padding>
-               <VBox prefHeight="108.0" prefWidth="285.0" style="-fx-background-color: red;">
+               <VBox onMouseClicked="#HandleReminders" prefHeight="108.0" prefWidth="285.0" style="-fx-background-color: red;">
                   <TilePane.margin>
                      <Insets bottom="10.0" />
                   </TilePane.margin>
@@ -155,7 +155,7 @@
                      <Label alignment="CENTER" layoutX="80.0" layoutY="52.0" prefHeight="31.0" prefWidth="104.0" style="-fx-font-size: 20; -fx-text-fill: red;" text="00:15:00" />
                   </AnchorPane>
                </VBox>
-               <VBox layoutX="16.0" layoutY="20.0" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: red;">
+               <VBox layoutX="16.0" layoutY="20.0" onMouseClicked="#HandleReminders" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: red;">
                   <TilePane.margin>
                      <Insets bottom="10.0" />
                   </TilePane.margin>
@@ -170,7 +170,7 @@
                      <Label alignment="CENTER" layoutX="80.0" layoutY="52.0" prefHeight="31.0" prefWidth="104.0" style="-fx-font-size: 20; -fx-text-fill: red;" text="00:30:00" />
                   </AnchorPane>
                </VBox>
-               <VBox layoutX="16.0" layoutY="128.0" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: red;">
+               <VBox layoutX="16.0" layoutY="128.0" onMouseClicked="#HandleReminders" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: red;">
                   <TilePane.margin>
                      <Insets bottom="10.0" />
                   </TilePane.margin>
@@ -185,7 +185,7 @@
                      <Label alignment="CENTER" layoutX="80.0" layoutY="52.0" prefHeight="31.0" prefWidth="104.0" style="-fx-font-size: 20; -fx-text-fill: red;" text="00:45:00" />
                   </AnchorPane>
                </VBox>
-               <VBox layoutX="16.0" layoutY="236.0" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: orange;">
+               <VBox layoutX="16.0" layoutY="236.0" onMouseClicked="#HandleReminders" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: orange;">
                   <TilePane.margin>
                      <Insets bottom="10.0" />
                   </TilePane.margin>
@@ -200,7 +200,7 @@
                      <Label alignment="CENTER" layoutX="80.0" layoutY="52.0" prefHeight="31.0" prefWidth="104.0" style="-fx-text-fill: orange;" text="03:00:00" />
                   </AnchorPane>
                </VBox>
-               <VBox layoutX="16.0" layoutY="344.0" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: green;">
+               <VBox layoutX="16.0" layoutY="344.0" onMouseClicked="#HandleReminders" prefHeight="108.0" prefWidth="266.0" style="-fx-background-color: green;">
                   <TilePane.margin>
                      <Insets bottom="10.0" />
                   </TilePane.margin>
@@ -217,29 +217,29 @@
                </VBox>
             </TilePane>
          </ScrollPane>
-         <ImageView fx:id="searchBtn" fitHeight="55.0" fitWidth="53.0" layoutX="42.0" layoutY="32.0">
+         <ImageView fx:id="searchBtn" fitHeight="55.0" fitWidth="53.0" layoutX="42.0" layoutY="32.0" onMouseClicked="#HandleBtns">
             <effect>
                <DropShadow />
             </effect>
-            <Image url="@../Images/search-9-xl.png" />
+            <Image url="@../../Images/search-9-xl.png" />
          </ImageView>
-         <ImageView fx:id="aboutBtn" fitHeight="55.0" fitWidth="53.0" layoutX="48.0" layoutY="472.0">
+         <ImageView fx:id="aboutBtn" fitHeight="55.0" fitWidth="53.0" layoutX="48.0" layoutY="472.0" onMouseClicked="#HandleBtns">
             <effect>
                <DropShadow />
             </effect>
-            <Image url="@../Images/info-2-xl.png" />
+            <Image url="@../../Images/info-2-xl.png" />
          </ImageView>
-         <ImageView fx:id="helpBtn" fitHeight="56.0" fitWidth="59.0" layoutX="46.0" layoutY="386.0">
+         <ImageView fx:id="helpBtn" fitHeight="56.0" fitWidth="59.0" layoutX="46.0" layoutY="386.0" onMouseClicked="#HandleBtns">
             <effect>
                <DropShadow />
             </effect>
-            <Image url="@../Images/question-mark-xl.png" />
+            <Image url="@../../Images/question-mark-xl.png" />
          </ImageView>
-         <ImageView fx:id="settingsBtn" fitHeight="57.0" fitWidth="60.0" layoutX="41.0" layoutY="115.0">
+         <ImageView fx:id="settingsBtn" fitHeight="57.0" fitWidth="60.0" layoutX="41.0" layoutY="115.0" onMouseClicked="#HandleBtns">
             <effect>
                <DropShadow />
             </effect>
-            <Image url="@../Images/settings-7-xl.png" />
+            <Image url="@../../Images/settings-7-xl.png" />
          </ImageView>
       </AnchorPane>
    </GridPane>
